--- a/index-three-page.html
+++ b/index-three-page.html
@@ -149,100 +149,24 @@
                 <div class="main-menu">
                   <nav id="mobile-menu">
                     <ul>
-                      <li class="has-dropdown active menu-thumb">
-                        <a href="index.html">
-                          Home
-                          <i class="fa-solid fa-chevron-down"></i>
-                        </a>
-                        <ul class="submenu has-homemenu">
+                      <li>
+                        <a href="index.html">Inicio</a>
+                      </li>
+                      <li>
+                        <a href="about.html">Sobre Nosotros</a>
+                      </li>
+                      <li class="has-dropdown">
+                        <a href="service.html">Servicios</a>
+                        <ul class="submenu">
                           <li>
-                            <div class="homemenu-items">
-                              <div class="homemenu">
-                                <div class="homemenu-thumb">
-                                  <img
-                                    src="assets/img/header/home-1.jpg"
-                                    alt="img"
-                                  />
-                                  <div class="demo-button">
-                                    <a href="index.html" class="theme-btn">
-                                      Multi Page
-                                    </a>
-                                    <a
-                                      href="index-one-page.html"
-                                      class="theme-btn"
-                                    >
-                                      One Page
-                                    </a>
-                                  </div>
-                                </div>
-                                <div class="homemenu-content text-center">
-                                  <h4 class="homemenu-title">Home One</h4>
-                                </div>
-                              </div>
-                              <div class="homemenu">
-                                <div class="homemenu-thumb mb-15">
-                                  <img
-                                    src="assets/img/header/home-2.jpg"
-                                    alt="img"
-                                  />
-                                  <div class="demo-button">
-                                    <a href="index-2.html" class="theme-btn">
-                                      Multi Page
-                                    </a>
-                                    <a
-                                      href="index-two-page.html"
-                                      class="theme-btn"
-                                    >
-                                      One Page
-                                    </a>
-                                  </div>
-                                </div>
-                                <div class="homemenu-content text-center">
-                                  <h4 class="homemenu-title">Home Two</h4>
-                                </div>
-                              </div>
-                              <div class="homemenu">
-                                <div class="homemenu-thumb mb-15">
-                                  <img
-                                    src="assets/img/header/home-3.jpg"
-                                    alt="img"
-                                  />
-                                  <div class="demo-button">
-                                    <a href="index-3.html" class="theme-btn">
-                                      Multi Page
-                                    </a>
-                                    <a
-                                      href="index-three-page.html"
-                                      class="theme-btn"
-                                    >
-                                      One Page
-                                    </a>
-                                  </div>
-                                </div>
-                                <div class="homemenu-content text-center">
-                                  <h4 class="homemenu-title">Home Three</h4>
-                                </div>
-                              </div>
-                            </div>
+                            <a href="service-details.html"
+                              >Ver Todos los Servicios</a
+                            >
                           </li>
                         </ul>
                       </li>
-                      <li class="has-dropdown active d-xl-none">
-                        <a href="team.html" class="border-none"> Home </a>
-                        <ul class="submenu">
-                          <li><a href="index.html">Home 01</a></li>
-                          <li><a href="index-2.html">Home 02</a></li>
-                          <li><a href="index-3.html">Home 03</a></li>
-                        </ul>
-                      </li>
                       <li>
-                        <a href="#service">service</a>
-                      </li>
-                      <li>
-                        <a href="#news">blog</a>
-                      </li>
-                      <li>
-                        <a href="#portfolio">portfolio</a>
+                        <a href="contact.html">Contacto</a>
                       </li>
                     </ul>
                   </nav>
