--- a/index-two-page.html
+++ b/index-two-page.html
@@ -152,103 +152,24 @@
                 <div class="main-menu">
                   <nav id="mobile-menu">
                     <ul>
-                      <li class="has-dropdown active menu-thumb">
-                        <a href="index.html">
-                          Home
-                          <i class="fa-solid fa-chevron-down"></i>
-                        </a>
-                        <ul class="submenu has-homemenu">
+                      <li>
+                        <a href="index.html">Inicio</a>
+                      </li>
+                      <li>
+                        <a href="about.html">Sobre Nosotros</a>
+                      </li>
+                      <li class="has-dropdown">
+                        <a href="service.html">Servicios</a>
+                        <ul class="submenu">
                           <li>
-                            <div class="homemenu-items">
-                              <div class="homemenu">
-                                <div class="homemenu-thumb">
-                                  <img
-                                    src="assets/img/header/home-1.jpg"
-                                    alt="img"
-                                  />
-                                  <div class="demo-button">
-                                    <a href="index.html" class="theme-btn">
-                                      Multi Page
-                                    </a>
-                                    <a
-                                      href="index-one-page.html"
-                                      class="theme-btn"
-                                    >
-                                      One Page
-                                    </a>
-                                  </div>
-                                </div>
-                                <div class="homemenu-content text-center">
-                                  <h4 class="homemenu-title">Home One</h4>
-                                </div>
-                              </div>
-                              <div class="homemenu">
-                                <div class="homemenu-thumb mb-15">
-                                  <img
-                                    src="assets/img/header/home-2.jpg"
-                                    alt="img"
-                                  />
-                                  <div class="demo-button">
-                                    <a href="index-2.html" class="theme-btn">
-                                      Multi Page
-                                    </a>
-                                    <a
-                                      href="index-two-page.html"
-                                      class="theme-btn"
-                                    >
-                                      One Page
-                                    </a>
-                                  </div>
-                                </div>
-                                <div class="homemenu-content text-center">
-                                  <h4 class="homemenu-title">Home Two</h4>
-                                </div>
-                              </div>
-                              <div class="homemenu">
-                                <div class="homemenu-thumb mb-15">
-                                  <img
-                                    src="assets/img/header/home-3.jpg"
-                                    alt="img"
-                                  />
-                                  <div class="demo-button">
-                                    <a href="index-3.html" class="theme-btn">
-                                      Multi Page
-                                    </a>
-                                    <a
-                                      href="index-three-page.html"
-                                      class="theme-btn"
-                                    >
-                                      One Page
-                                    </a>
-                                  </div>
-                                </div>
-                                <div class="homemenu-content text-center">
-                                  <h4 class="homemenu-title">Home Three</h4>
-                                </div>
-                              </div>
-                            </div>
+                            <a href="service-details.html"
+                              >Ver Todos los Servicios</a
+                            >
                           </li>
                         </ul>
                       </li>
-                      <li class="has-dropdown active d-xl-none">
-                        <a href="team.html" class="border-none"> Home </a>
-                        <ul class="submenu">
-                          <li><a href="index.html">Home 01</a></li>
-                          <li><a href="index-2.html">Home 02</a></li>
-                          <li><a href="index-3.html">Home 03</a></li>
-                        </ul>
-                      </li>
                       <li>
-                        <a href="#about">About Us</a>
-                      </li>
-                      <li>
-                        <a href="#service">service</a>
-                      </li>
-                      <li>
-                        <a href="#news">blog</a>
-                      </li>
-                      <li>
-                        <a href="#appointment">contact</a>
+                        <a href="contact.html">Contacto</a>
                       </li>
                     </ul>
                   </nav>
@@ -984,7 +905,7 @@
                         >
                           <circle cx="25" cy="25" r="25" fill="#B68C5A" />
                           <path
-                            d="M38.7322 16C39.0224 16 39.2833 16.1909 39.3617 16.474C39.4488 16.7888 39.2823 17.1184 38.9743 17.2396C36.9286 18.0456 35.4263 19.4274 34.4993 21.3531C37.3364 22.0764 39.3847 24.6171 39.3847 27.5714C39.3847 31.1163 36.4563 34 32.8569 34C29.2575 34 26.3294 31.1163 26.3294 27.5714C26.324 27.5228 25.7478 17.9383 38.6333 16.0072C38.6665 16.0022 38.6994 16 38.7322 16ZM32.8569 32.7143C35.7362 32.7143 38.0784 30.4071 38.0784 27.5714C38.0784 24.9818 36.1111 22.7895 33.5026 22.4725C33.3037 22.448 33.127 22.3354 33.0237 22.1665C32.92 21.9976 32.9009 21.7914 32.972 21.6068C33.4959 20.2442 34.2415 19.0875 35.202 18.1436C27.2363 20.8858 27.6283 27.4487 27.6337 27.5237C27.6356 30.4071 29.9779 32.7143 32.8569 32.7143Z"
+                            d="M38.7322 16C39.0224 16 39.2833 16.1909 39.3617 16.474C39.4488 16.7888 39.2823 17.1184 38.9743 17.2396C36.9286 18.0456 35.4263 19.4274 34.4993 21.3531C37.3364 22.0764 39.3847 24.6171 39.3847 27.5714C39.3847 31.1163 36.4563  34 32.8569 34C29.2575 34 26.3294 31.1163 26.3294 27.5714C26.324 27.5228 25.7478 17.9383 38.6333 16.0072C38.6665 16.0022 38.6994 16 38.7322 16ZM32.8569 32.7143C35.7362 32.7143 38.0784 30.4071 38.0784 27.5714C38.0784 24.9818 36.1111 22.7895 33.5026 22.4725C33.3037 22.448 33.127 22.3354 33.0237 22.1665C32.92 21.9976 32.9009 21.7914 32.972 21.6068C33.4959 20.2442 34.2415 19.0875 35.202 18.1436C27.2363 20.8858 27.6283 27.4487 27.6337 27.5237C27.6356 30.4071 29.9779 32.7143 32.8569 32.7143Z"
                             fill="white"
                           />
                           <path
