--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
               </li>
               <li>
                 <i class="fa-solid fa-envelope"></i>
-                <a href="mailto:Synapse@gmail.com"> Synapse@gmail.com </a>
+                <a href="mailto:contacto@synapse-legal.com">
+                  contacto@synapse-legal.com
+                </a>
               </li>
             </ul>
             <div class="top-right">
@@ -194,74 +196,24 @@
                 <div class="main-menu">
                   <nav id="mobile-menu">
                     <ul>
-                      <li class="has-dropdown active menu-thumb">
-                        <a href="index.html">
-                          Inicio
-                          <i class="fa-solid fa-chevron-down"></i>
-                        </a>
+                      <li>
+                        <a href="index.html">Inicio</a>
                       </li>
-                      <li class="has-dropdown active d-xl-none">
-                        <a href="team.html" class="border-none"> Inicio </a>
-                        <ul class="submenu">
-                          <li><a href="index.html">Inicio 01</a></li>
-                          <li><a href="index-2.html">Inicio 02</a></li>
-                          <li><a href="index-3.html">Inicio 03</a></li>
-                        </ul>
+                      <li>
+                        <a href="about.html">Sobre Nosotros</a>
                       </li>
                       <li class="has-dropdown">
-                        <a href="news.html">
-                          Páginas
-                          <i class="fa-solid fa-chevron-down"></i>
-                        </a>
+                        <a href="service.html">Servicios</a>
                         <ul class="submenu">
-                          <li><a href="about.html">Acerca de</a></li>
-                          <li><a href="portfolio.html">portafolio</a></li>
-                          <li>
-                            <a href="portfolio-details.html"
-                              >Detalles del portafolio</a
-                            >
-                          </li>
-                          <li><a href="team.html">Nuestros Abogados</a></li>
-                          <li>
-                            <a href="team-details.html">Detalles del Abogado</a>
-                          </li>
-                          <li><a href="testimonial.html">Testimonios</a></li>
-                          <li><a href="pricing.html">Precios</a></li>
-                          <li><a href="faq.html">Preguntas Frecuentes</a></li>
-                          <li><a href="404.html">404</a></li>
-                        </ul>
-                      </li>
-                      <li>
-                        <a href="service-details.html">
-                          servicio
-                          <i class="fa-solid fa-chevron-down"></i>
-                        </a>
-                        <ul class="submenu">
-                          <li><a href="service.html">servicios</a></li>
                           <li>
                             <a href="service-details.html"
-                              >Detalles de servicios</a
+                              >Ver Todos los Servicios</a
                             >
                           </li>
                         </ul>
                       </li>
                       <li>
-                        <a href="news-details.html">
-                          Blog
-                          <i class="fa-solid fa-chevron-down"></i>
-                        </a>
-                        <ul class="submenu">
-                          <li><a href="news.html">Blog en Cuadrícula</a></li>
-                          <li>
-                            <a href="news-standard.html">Blog Estándar</a>
-                          </li>
-                          <li>
-                            <a href="news-details.html">Detalles del Blog</a>
-                          </li>
-                        </ul>
-                      </li>
-                      <li>
-                        <a href="contact.html">Contáctanos</a>
+                        <a href="contact.html">Contacto</a>
                       </li>
                     </ul>
                   </nav>
@@ -506,12 +458,15 @@
                 </div>
                 <div class="content">
                   <h4>
-                    <a href="service-details.html"> Ley de atención médica </a>
+                    <a href="service-details.html"> Creación de Empresas </a>
                   </h4>
                   <p>
-                    Sabemos que el camino hacia la jubilación de cada persona es
-                    diferente. Tenga la seguridad, sin importar sus metas o en
-                    qué punto se encuentre.
+                    Te ayudamos a constituir tu empresa en línea desde cualquier
+                    lugar del mundo sin socios mexicanos, así como a obtener un
+                    domicilio fiscal, RFC y e-Firma, apertura de cuentas
+                    bancarias e inscripción en RNIE (Registro Nacional de
+                    Inversión Extranjera). Asimismo, brindamos asesoría con la
+                    elaboración y revisión de contratos civiles y mercantiles.
                   </p>
                 </div>
               </div>
@@ -534,12 +489,15 @@
                 </div>
                 <div class="content">
                   <h4>
-                    <a href="service-details.html"> Ley de seguros </a>
+                    <a href="service-details.html"> Propiedad Intelectual </a>
                   </h4>
                   <p>
-                    Sabemos que el camino hacia la jubilación de cada persona es
-                    diferente. Tenga la seguridad, sin importar sus metas o en
-                    qué punto se encuentre.
+                    Asesoría en protección de activos intangibles como marcas,
+                    patentes y derechos de autor. Asimismo, te ayudamos con los
+                    siguientes trámites: registro de marca, búsqueda de marca en
+                    el Instituto Mexicano de la Propiedad Industrial, renovación
+                    de marca, declaración de uso de marca y registro de obras en
+                    el Instituto Nacional del Derechos de Autor.
                   </p>
                 </div>
               </div>
@@ -559,12 +517,15 @@
                 </div>
                 <div class="content">
                   <h4>
-                    <a href="service-details.html"> Violencia familiar </a>
+                    <a href="service-details.html">
+                      Corporativo y Empresarial
+                    </a>
                   </h4>
                   <p>
-                    Sabemos que el camino hacia la jubilación de cada persona es
-                    diferente. Tenga la seguridad, sin importar sus metas o en
-                    qué punto se encuentre.
+                    Asesoría en fusiones, adquisiciones, transformaciones,
+                    escisiones, disolución y liquidación, emisión de poderes,
+                    resoluciones corporativas, libros corporativos y
+                    cumplimiento normativo.
                   </p>
                 </div>
               </div>
@@ -584,12 +545,14 @@
                 </div>
                 <div class="content">
                   <h4>
-                    <a href="service-details.html"> Ley educativa </a>
+                    <a href="service-details.html"> Inmobiliario </a>
                   </h4>
                   <p>
-                    Sabemos que el camino hacia la jubilación de cada persona es
-                    diferente. Tenga la seguridad, sin importar sus metas o en
-                    qué punto se encuentre.
+                    Asesoría en operaciones relacionadas con bienes inmuebles:
+                    compraventa, arrendamiento, donación, usufructo, propiedad
+                    en condominio, cesión de derechos, fideicomisos
+                    inmobiliarios, construcción, registros, zonificación,
+                    licencias.
                   </p>
                 </div>
               </div>
