--- a/about.html
+++ b/about.html
@@ -146,7 +146,9 @@
               </li>
               <li>
                 <i class="fa-solid fa-envelope"></i>
-                <a href="mailto:Synapse@gmail.com"> Synapse@gmail.com </a>
+                <a href="mailto:contacto@synapse-legal.com">
+                  contacto@synapse-legal.com
+                </a>
               </li>
             </ul>
             <div class="top-right">
@@ -189,142 +191,24 @@
                 <div class="main-menu">
                   <nav id="mobile-menu">
                     <ul>
-                      <li class="has-dropdown active menu-thumb">
-                        <a href="index.html">
-                          Home
-                          <i class="fa-solid fa-chevron-down"></i>
-                        </a>
-                        <ul class="submenu has-homemenu">
-                          <li>
-                            <div class="homemenu-items">
-                              <div class="homemenu">
-                                <div class="homemenu-thumb">
-                                  <img
-                                    src="assets/img/header/home-1.jpg"
-                                    alt="img"
-                                  />
-                                  <div class="demo-button">
-                                    <a href="index.html" class="theme-btn">
-                                      Multi Page
-                                    </a>
-                                    <a
-                                      href="index-one-page.html"
-                                      class="theme-btn"
-                                    >
-                                      One Page
-                                    </a>
-                                  </div>
-                                </div>
-                                <div class="homemenu-content text-center">
-                                  <h4 class="homemenu-title">Home One</h4>
-                                </div>
-                              </div>
-                              <div class="homemenu">
-                                <div class="homemenu-thumb mb-15">
-                                  <img
-                                    src="assets/img/header/home-2.jpg"
-                                    alt="img"
-                                  />
-                                  <div class="demo-button">
-                                    <a href="index-2.html" class="theme-btn">
-                                      Multi Page
-                                    </a>
-                                    <a
-                                      href="index-two-page.html"
-                                      class="theme-btn"
-                                    >
-                                      One Page
-                                    </a>
-                                  </div>
-                                </div>
-                                <div class="homemenu-content text-center">
-                                  <h4 class="homemenu-title">Home Two</h4>
-                                </div>
-                              </div>
-                              <div class="homemenu">
-                                <div class="homemenu-thumb mb-15">
-                                  <img
-                                    src="assets/img/header/home-3.jpg"
-                                    alt="img"
-                                  />
-                                  <div class="demo-button">
-                                    <a href="index-3.html" class="theme-btn">
-                                      Multi Page
-                                    </a>
-                                    <a
-                                      href="index-three-page.html"
-                                      class="theme-btn"
-                                    >
-                                      One Page
-                                    </a>
-                                  </div>
-                                </div>
-                                <div class="homemenu-content text-center">
-                                  <h4 class="homemenu-title">Home Three</h4>
-                                </div>
-                              </div>
-                            </div>
-                          </li>
-                        </ul>
+                      <li>
+                        <a href="index.html">Inicio</a>
                       </li>
-                      <li class="has-dropdown active d-xl-none">
-                        <a href="team.html" class="border-none"> Home </a>
-                        <ul class="submenu">
-                          <li><a href="index.html">Home 01</a></li>
-                          <li><a href="index-2.html">Home 02</a></li>
-                          <li><a href="index-3.html">Home 03</a></li>
-                        </ul>
+                      <li>
+                        <a href="about.html">Sobre Nosotros</a>
                       </li>
                       <li class="has-dropdown">
-                        <a href="news.html">
-                          Pages
-                          <i class="fa-solid fa-chevron-down"></i>
-                        </a>
+                        <a href="service.html">Servicios</a>
                         <ul class="submenu">
-                          <li><a href="about.html">About</a></li>
-                          <li><a href="portfolio.html">portfolio</a></li>
                           <li>
-                            <a href="portfolio-details.html"
-                              >portfolio Details</a
+                            <a href="service-details.html"
+                              >Ver Todos los Servicios</a
                             >
                           </li>
-                          <li><a href="team.html">Our Attorney</a></li>
-                          <li>
-                            <a href="team-details.html">Attorney Details</a>
-                          </li>
-                          <li><a href="testimonial.html">Testimonial</a></li>
-                          <li><a href="pricing.html">Pricing</a></li>
-                          <li><a href="faq.html">Our Faq</a></li>
-                          <li><a href="404.html">404</a></li>
                         </ul>
                       </li>
                       <li>
-                        <a href="service-details.html">
-                          service
-                          <i class="fa-solid fa-chevron-down"></i>
-                        </a>
-                        <ul class="submenu">
-                          <li><a href="service.html">services</a></li>
-                          <li>
-                            <a href="service-details.html">services Details</a>
-                          </li>
-                        </ul>
-                      </li>
-                      <li>
-                        <a href="news-details.html">
-                          Blog
-                          <i class="fa-solid fa-chevron-down"></i>
-                        </a>
-                        <ul class="submenu">
-                          <li><a href="news.html">Blog Grid</a></li>
-                          <li>
-                            <a href="news-standard.html">Blog Standard</a>
-                          </li>
-                          <li><a href="news-details.html">Blog Details</a></li>
-                        </ul>
-                      </li>
-                      <li>
-                        <a href="contact.html">Contact Us</a>
+                        <a href="contact.html">Contacto</a>
                       </li>
                     </ul>
                   </nav>
@@ -826,7 +710,7 @@
                 <div class="team-social">
                   <a href="#"><i class="fab fa-facebook-f"></i></a>
                   <a href="#"><i class="fab fa-twitter"></i></a>
-                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                  <a href="#"><i class="fab fa-linkedin-in"></i>
                   <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 </div>
               </div>
